--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/android": "5.0.0",
     "@capacitor/app": "5.0.0",
     "@capacitor/core": "5.0.0",
+    "@capacitor/geolocation": "^5.0.1",
     "@capacitor/google-maps": "^5.0.1",
     "@capacitor/haptics": "5.0.0",
     "@capacitor/keyboard": "5.0.0",
