--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/google-maps": "^5.0.1",
     "@capacitor/haptics": "5.0.0",
     "@capacitor/keyboard": "5.0.0",
+    "@capacitor/motion": "^5.0.2",
     "@capacitor/push-notifications": "^5.0.1",
     "@capacitor/status-bar": "5.0.0",
     "@hookform/resolvers": "^3.1.0",
