--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/motion": "^5.0.2",
     "@capacitor/push-notifications": "^5.0.1",
     "@capacitor/status-bar": "5.0.0",
+    "@capacitor/toast": "^5.0.2",
     "@hookform/resolvers": "^3.1.0",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
