--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "ionicons": "^7.0.0",
     "libphonenumber-js": "^1.10.30",
     "react": "^18.2.0",
