--- a/package.json
+++ b/package.json
@@ -12,27 +12,26 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "5.0.0",
-    "@capacitor/app": "5.0.0",
-    "@capacitor/core": "5.0.0",
-    "@capacitor/geolocation": "^5.0.1",
-    "@capacitor/google-maps": "^5.0.1",
-    "@capacitor/haptics": "5.0.0",
-    "@capacitor/keyboard": "5.0.0",
+    "@capacitor/android": "^5.0.3",
+    "@capacitor/app": "^5.0.2",
+    "@capacitor/core": "^5.0.3",
+    "@capacitor/geolocation": "^5.0.2",
+    "@capacitor/google-maps": "^5.1.0",
+    "@capacitor/haptics": "^5.0.2",
+    "@capacitor/keyboard": "^5.0.2",
     "@capacitor/motion": "^5.0.2",
-    "@capacitor/push-notifications": "^5.0.1",
-    "@capacitor/status-bar": "5.0.0",
+    "@capacitor/push-notifications": "^5.0.2",
+    "@capacitor/status-bar": "^5.0.2",
     "@capacitor/toast": "^5.0.2",
     "@hookform/resolvers": "^3.1.0",
-    "@ionic/react": "^7.0.0",
-    "@ionic/react-router": "^7.0.0",
-    "@tanstack/react-query": "^4.29.5",
-    "@types/react-router": "^5.1.20",
-    "@types/react-router-dom": "^5.3.3",
+    "@ionic/react": "^7.0.7",
+    "@ionic/react-router": "^7.0.7",
+    "@react-google-maps/api": "^2.18.1",
+    "@tanstack/react-query": "^4.29.7",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
-    "ionicons": "^7.0.0",
+    "ionicons": "^7.1.0",
     "libphonenumber-js": "^1.10.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,12 +41,14 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.0.0",
+    "@capacitor/cli": "^5.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^3.1.0",
     "cypress": "^12.7.0",
